--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
     <table>
 
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>
+        <h3>LOGO PROJECT <h3>
+          <a href= "LOGO/LogoReflection.html"><img src="LOGO/LogoImage.jpeg" width= 70% ></a>
+        </td>
+        <td><h3>Slot Animal  <h3>
+          <a href= "SLotAnimal/SlotAnimalReflection.html"><img src="SLotAnimal/SlotAnimal.png" width= 70% ></a></td>
+          <td><h3>Press Fit  <h3>
+          <a href= "PressFit/PressFitReflection.html"><img src="PressFit/IMG_4400.jpeg" width= 70% ></a></td></td>
       </tr>
 
       <tr>
-        <td></td>
-        <td></td>
+        <td><h3>Blinky Badge   <h3>
+          <a><img src="Blinky Badge/GifVid-animated.gif" width= 70% ></a></td></td>
+        <td><td><h3>Machine Drawing   <h3>
+          <a href= "CreativeCoding/CreativeCodingReflection.html"><img src="CreativeCoding/IMG_5326.jpeg" width= 70% ></a></td></td></td>
         <td></td>
       </tr>
 
