--- a/LOGO/LogoReflection.html
+++ b/LOGO/LogoReflection.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-
+<script src="../p5.js"></script>
+<script src="../p5.sound.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<meta charset="utf-8">
 <head>
 
     <style>
@@ -19,7 +22,8 @@
 </head>
 
 <body>
-
+    <script src="../sketch.js"></script>
+<a href="../index.html"><H2> HOME <H2>
 
 
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vTcn7i-MJPKH9LYEti7QmAEBUSERb3WfdxUiz2Gys5viHoLzj7bpBY3ORJIV02CTgu30rzJDJvbz3AU/pub?embedded=true"></iframe>
