--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href= "CreativeCoding/CreativeCodingReflection.html"><img src="CreativeCoding/IMG_5326.jpeg" width= 70% ></a></td></td></td>
         <td></td>
         <td><td><h3>3D car   <h3>
-          <a href= "3Dcar/3DcarReflection.html.html"><img src="3Dcar/IMG_6456.jpeg" width= 70% ></a></td></td></td>
+          <a href= "3Dcar/3DcarReflection.html"><img src="3Dcar/IMG_6456.jpeg" width= 70% ></a></td></td></td>
         <td></td>
       </tr>
 
