--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <tr>
         <td><h3>Blinky Badge   <h3>
-          <a><img src="Blinky Badge/GifVid-animated.gif" width= 70% ></a></td></td>
+          <a><img src="Blinky badge/GifVid-animated.gif" width= 70% ></a></td></td>
         <td><td><h3>Machine Drawing   <h3>
           <a href= "CreativeCoding/CreativeCodingReflection.html"><img src="CreativeCoding/IMG_5326.jpeg" width= 70% ></a></td></td></td>
         <td></td>
