--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <td><td><h3>3D car   <h3>
           <a href= "3Dcar/3DcarReflection.html"><img src="3Dcar/IMG_6456.jpeg" width= 70% ></a></td></td></td>
         <td></td>
+        <td><td><h3>Synthesizer   <h3>
+          <a href= "Synth/SynthReflection.html"><img src="Synth/IMG_7061.jpeg" width= 70% ></a></td></td></td>
+        <td></td>
       </tr>
 
     </table>
